# snakebids-tutorial

./: README.md  analyzeimage  config.yml  myscript.sh  pyproject.toml  requirements.txt
tutorial_snakebids/: README.rst  pipeline_description.json  setup.py
tutorial_snakebids/docs/: conf.py
tutorial_snakebids/docs/getting_started/: installation.rst
tutorial_snakebids/docs/usage/: app_cli.rst
workflow/: Snakefile1  Snakefile3  Snakefile4  Snakefile5  Snakefile6  Snakefile7
